--- a/package.json
+++ b/package.json
@@ -26,14 +26,17 @@
     "gatsby-source-contentful": "^7.15.0",
     "gatsby-source-filesystem": "^4.17.0",
     "pixi.js": "^6.4.2",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.3",
     "twin.macro": "3.0.0-rc.3",
+    "universal-cookie": "^4.0.4",
     "validator": "^13.7.0"
   }
 }
