--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-helmet": "^6.1.0",
     "react-notifications-component": "^4.0.1",
     "react-router-dom": "^6.3.0",
+    "react-spinners": "^0.13.4",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "tailwindcss": "^3.1.3",
