--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^4.3.0",
     "gatsby-plugin-amplitude": "^0.1.0",
     "gatsby-plugin-favicons": "^2.0.0",
+    "gatsby-plugin-google-tagmanager": "^4.23.0",
     "gatsby-plugin-image": "^2.17.0",
     "gatsby-plugin-manifest": "^4.17.0",
     "gatsby-plugin-react-helmet": "^5.17.0",
