--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@hummingbot/hbui": "^1.4.31",
+    "@hummingbot/hbui": "1.8.27",
     "dotenv": "^16.0.1",
     "gatsby": "^4.3.0",
     "gatsby-plugin-amplitude": "^0.1.0",
