--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
-    "tailwindcss": "^3.1.3",
-    "twin.macro": "3.0.0-rc.3",
+    "tailwindcss": "^3.2.7",
+    "twin.macro": "^3.1.0",
     "universal-cookie": "^4.0.4",
     "validator": "^13.7.0"
   }
