--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-google-tagmanager": "^4.23.0",
     "gatsby-plugin-image": "^2.17.0",
     "gatsby-plugin-manifest": "^4.17.0",
+    "gatsby-plugin-posthog": "^1.0.1",
     "gatsby-plugin-react-helmet": "^5.17.0",
     "gatsby-plugin-remove-fingerprints": "^0.0.2",
     "gatsby-plugin-styled-components": "^5.17.0",
