--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@hummingbot/hbui": "1.8.27",
+    "@hummingbot/hbui": "1.9.6",
     "dotenv": "^16.0.1",
     "gatsby": "^4.3.0",
     "gatsby-plugin-amplitude": "^0.1.0",
     "gatsby-plugin-favicons": "^2.0.0",
     "gatsby-plugin-google-tagmanager": "^4.23.0",
     "gatsby-plugin-image": "^2.17.0",
+    "gatsby-plugin-mailchimp": "^5.2.2",
     "gatsby-plugin-manifest": "^4.17.0",
     "gatsby-plugin-posthog": "^1.0.1",
     "gatsby-plugin-react-helmet": "^5.17.0",
